# GD32F303-PLC

./: .gitignore  CMakeLists.txt  GD32F303ZET6_FLASH.ld  STM32F103XX_FLASH.ld  VS-CODE-F103.ioc  startup_gd32f30x_hd.S
.claude/: settings.json  settings.local.json
App/: app_can.c  app_can.h  app_eeprom.c  app_eeprom.h  app_foc.c  app_foc.h  app_hall.c  app_hall.h  app_led.c  app_led.h  app_motor.c  app_motor.h  app_rs485.c  app_rs485.h  app_sensor.c  app_sensor.h  app_system.c  app_system.h
Bsp/: bsp_adc.c  bsp_adc.h  bsp_can.c  bsp_can.h  bsp_clock.c  bsp_clock.h  bsp_gpio.c  bsp_gpio.h  bsp_tim.c  bsp_tim.h  bsp_uart.c  bsp_uart.h
Core/Inc/: app_config.h  gd32f30x_it.h  main.h  stm32f10x_conf.h  stm32f10x_it.h
Core/Src/: gd32f30x_it.c  main.c  stm32f10x_it.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Driver/: drv_eg3112.c  drv_eg3112.h  drv_m93c46.c  drv_m93c46.h  drv_tpl0501.c  drv_tpl0501.h
Drivers/CMSIS/: stm32f10x.h
Drivers/CMSIS/GD/GD32F30x/Include/: gd32f30x_libopt.h
Drivers/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
Drivers/STM32F10x_StdPeriph/src/: stm32f10x_flash.c  stm32f10x_i2c.c  stm32f10x_usart.c
Utils/: utils_filter.c  utils_filter.h  utils_ringbuf.c  utils_ringbuf.h
app/io/: plc_io.h
app/protocol/: gxworks.c  gxworks.h
bsp/: bsp_gpio.c  bsp_gpio.h  bsp_uart.c  bsp_uart.h  bsp_uart_hdr.txt
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
